@@ -32,6 +32,10 @@ class GroupChartDataServiceTests {
     private final User testUser2 = new User(UserResponse.newBuilder().setId(2).build());
     private static final int testParentProjectId = 1;
     private static final int testGroupId = 1;
+    private static final Date startDate = Date.valueOf("2022-01-01");
+    private static final Date dateInBound = Date.valueOf("2023-01-01");
+    private static final Date endDate = Date.valueOf("2024-01-01");
+
     private static final String TEST_DESCRIPTION = "According to all known laws of aviation, there is no way a bee should be able to fly.";
 
     //Skills//
@@ -496,7 +500,7 @@ class GroupChartDataServiceTests {
         Date endDate = Date.valueOf("2022-03-01");
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, new ArrayList<>());
         Map<String, Integer> result = groupChartDataService.getGroupEvidenceDataOverTime(testGroup, startDate, endDate, "month");
-        System.out.println(Arrays.asList(result));
+        System.out.println(List.of(result));
         assertEquals(3, result.size());
         assertEquals(0, result.get("2022-01"));
         assertEquals(0, result.get("2022-02"));
@@ -592,7 +596,7 @@ class GroupChartDataServiceTests {
     @Test
     void whenNoUsersInGroup_testGetGroupCategoryData() {
         Group testGroup = new Group(testGroupId, "Short Name", "Long Name", testParentProjectId, new ArrayList<>());
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -608,7 +612,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(new ArrayList<>()).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -632,7 +636,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(testEvidenceList).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -655,7 +659,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(testEvidenceList).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(1, result.get("Quantitative"));
         assertEquals(1, result.get("Qualitative"));
@@ -682,7 +686,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(testEvidenceList).when(mockedEvidenceService).getEvidenceForPortfolio(testUser1.getId(), testParentProjectId);
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(2, result.get("Service"));
         assertEquals(2, result.get("Quantitative"));
         assertEquals(2, result.get("Qualitative"));
@@ -697,7 +701,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(new ArrayList<>(), new ArrayList<>()).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -717,7 +721,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(0, result.get("Service"));
         assertEquals(0, result.get("Quantitative"));
         assertEquals(0, result.get("Qualitative"));
@@ -743,7 +747,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(1, result.get("Service"));
         assertEquals(2, result.get("Quantitative"));
         assertEquals(1, result.get("Qualitative"));
@@ -768,7 +772,7 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup, startDate, endDate);
         assertEquals(2, result.get("Service"));
         assertEquals(2, result.get("Quantitative"));
         assertEquals(2, result.get("Qualitative"));
@@ -793,12 +797,12 @@ class GroupChartDataServiceTests {
         Mockito.doReturn(List.of(testEvidence1), List.of(testEvidence2)).when(mockedEvidenceService).getEvidenceForPortfolio(any(int.class), any(int.class));
         groupChartDataService.setEvidenceService(mockedEvidenceService);
 
-        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup1);
+        Map<String, Integer> result = groupChartDataService.getGroupCategoryInfo(testGroup1, startDate, endDate);
         assertEquals(1, result.get("Service"));
         assertEquals(1, result.get("Quantitative"));
         assertEquals(1, result.get("Qualitative"));
 
-        Map<String, Integer> result2 = groupChartDataService.getGroupCategoryInfo(testGroup2);
+        Map<String, Integer> result2 = groupChartDataService.getGroupCategoryInfo(testGroup2, startDate, endDate);
         assertEquals(1, result2.get("Service"));
         assertEquals(1, result2.get("Quantitative"));
         assertEquals(1, result2.get("Qualitative"));
